<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>han_vehicle_launch</name>
  <version>0.1.0</version>
  <description>The han_vehicle_launch package</description>
  <maintainer email="he.gang2@byd.com">Gang He</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
